# circuit-info

./: LICENSE  README.md  circuit-info.cabal  stack.yaml
app/: Main.hs
src/: Circuit.hs  CircuitDiagram.hs  ParseQC.hs
